deploy/launchpad/overlays/oberon/patch-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: launchpad-api
spec:
  host: launchpad-api.apps.oberon.fm2aihpcsed.com
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: backend
    weight: 100
